# doorboard

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  escalation.yml  task.yml
.github/workflows/: ci.yml
apps/control-plane-api/: README.md  pyproject.toml
apps/control-plane-api/migrations/: env.py  script.py.mako
apps/control-plane-api/migrations/versions/: 0001_initial_schema.py  0002_presence_registry.py
apps/control-plane-api/src/control_plane_api/: __main__.py  _uuid7.py  app.py  bundles.py  cli.py  db.py  deletion.py  http_limits.py  ingest.py  models.py  mqtt.py  notify.py  presence.py  presence_engine.py  projections.py  purge.py  service.py  settings.py  state.py  telegram.py  tokens.py
apps/control-plane-api/tests/: conftest.py  factories.py  test_alerts.py  test_app_health.py  test_config_bundle_http.py  test_deletion.py  test_enrollment_key_http.py  test_ingest_idempotency.py  test_migrations.py  test_mood_scoreboard_food.py  test_mqtt.py  test_notify.py  test_presence_engine_db.py  test_presence_http.py  test_presence_resolver.py  test_purge.py  test_simulator_integration.py  test_smoke.py  test_social_moderation.py  test_telegram.py  test_tokens_http.py
apps/door-api/: README.md  pyproject.toml
apps/door-api/src/door_api/: __init__.py  __main__.py  adapters.py  app.py  broadcast.py  config.py  mqtt_bridge.py  persistence.py  session.py  visitor_tokens.py
apps/door-api/src/door_api/social/: __init__.py  config.py  errors.py  ratelimit.py  routes.py  sanitize.py  service.py  store.py
apps/door-api/tests/: test_app.py  test_cors.py  test_media_outbox.py  test_mqtt_bridge.py  test_session.py  test_smoke.py  test_social_api.py  test_social_service.py
apps/door-media/: README.md  pyproject.toml
apps/door-media/src/door_media/: __init__.py  __main__.py  _uuid7.py  adapters.py  app.py  db.py  emitter.py  mediamtx_router.py  mock_router.py  service.py  settings.py
apps/door-media/tests/: conftest.py  test_app.py  test_db.py  test_emitter.py  test_mediamtx_router.py  test_mock_router.py  test_service.py  test_smoke.py
apps/door-sync/: README.md  pyproject.toml
apps/door-sync/src/door_sync/: __init__.py  __main__.py  _uuid7.py  app.py  emitter.py  engine.py  fence.py  gallery.py  media_client.py  queue.py  settings.py  sources.py  targets.py
apps/door-sync/tests/: conftest.py  test_app.py  test_chaos.py  test_credential_fence.py  test_engine.py  test_fence.py  test_integration_media.py  test_integration_nuc.py  test_outage.py  test_queue.py  test_smoke.py  test_sources.py
apps/door-ui/: README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/door-visiond/: README.md  pyproject.toml
apps/door-visiond/src/door_visiond/: __init__.py  __main__.py  _uuid7.py  adapters.py  app.py  clock.py  compat.py  consent.py  embedder.py  embedding.py  enrollment.py  events.py  hailo_pipeline.py  identity_cache.py  logging_setup.py  matcher.py  pipeline.py  privacy_store.py  purge_outbox.py  service.py  settings.py  storage_security.py
apps/door-visiond/tests/: conftest.py  test_app.py  test_compat.py  test_embedding.py  test_enrollment.py  test_hailo_pipeline.py  test_identity_cache_esp32.py  test_pipeline_privacy.py  test_privacy_mode.py  test_redaction.py  test_service.py  test_smoke.py  test_storage_security.py
apps/simulator/: README.md  pyproject.toml
apps/simulator/scenarios/: basic-bell.json  double-press-abuse.json  full-happy-path.json  identity-churn-abuse.json  known-visitor.json  nuc-outage.json  press-during-recording.json  storage-low.json  unknown-visitor.json
apps/simulator/src/doorboard_simulator/: __init__.py  __main__.py  cli.py  clock.py  esp32.py  events.py  ids.py  media.py  outages.py  panel.py  scenarios.py  vision.py
apps/simulator/tests/: test_protocol.py  test_scenarios.py  test_smoke.py
apps/simulator/tests/golden/: basic-bell.json  double-press-abuse.json  full-happy-path.json  identity-churn-abuse.json  known-visitor.json  nuc-outage.json  press-during-recording.json  storage-low.json  unknown-visitor.json
apps/wallboard-worker/: README.md  pyproject.toml
apps/wallboard-worker/src/wallboard_worker/: __init__.py  cli.py  jobs.py  providers.py  scheduler.py  settings.py  uuid7.py
apps/wallboard-worker/tests/: test_aircraft.py  test_aircraft_enrichment.py  test_birdnet.py  test_food.py  test_food_recommendation.py  test_printer.py  test_satellites.py  test_scheduler.py  test_smoke.py  test_stanford_food.py
apps/wallboard-worker/tests/fixtures/: avian_recent.json  wilbur_lunch_2026_05_11.html
deploy/nas/: README.md
deploy/nuc/: README.md
deploy/pi-adsb/: README.md
deploy/pi-bird/: README.md  install-avian-visitors.sh  verify-avian-visitors.sh
deploy/pi-door/: README.md  doorboard.env.example  install-systemd  kiosk-doorpad.env.example  kiosk-wallboard.env.example
docs/: doorboard-runtime.html  link-check-exclusion.txt
docs/adr/: 0001-record-architecture-decisions.md  0002-two-plane-architecture.md  0003-technology-stack.md  (+12 more)
integrations/food-recommendation/: README.md  pyproject.toml
integrations/food-recommendation/src/food_recommendation/: __init__.py  provider.py
integrations/food-recommendation/src/food_recommendation/stanford/: __init__.py  meal.py  models.py  preferences.py  provider.py  recommender.py  scorer.py  scraper.py
integrations/printer/: README.md  pyproject.toml
integrations/printer/src/printer/: __init__.py  provider.py
integrations/satellites/: README.md  pyproject.toml
integrations/satellites/src/satellites/: __init__.py  provider.py
scripts/: README.md  _uv-env  check-door-storage  check-generated-contracts  check-structure  dev-up  doorboard-health-agent  lint  serve_door_ui.py  test  typecheck  wait-http
tests/: README.md
(+238 files in other folders)
