[project]
name = "doorboard-door-api"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = ["doorboard-contracts", "doorboard-esp32-link", "fastapi", "uvicorn", "websockets", "httpx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/door_api"]
