[project]
name = "doorboard-door-visiond"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "doorboard-contracts",
    "doorboard-observability",
    "fastapi",
    "uvicorn",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/door_visiond"]
