[project]
name = "doorboard-simulator"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "doorboard-contracts",
    "doorboard-door-api",
    "doorboard-door-media",
    "doorboard-door-visiond",
]

[project.scripts]
doorboard-sim = "doorboard_simulator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doorboard_simulator"]
