[project]
name = "doorboard-wallboard-worker"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "doorboard-contracts",
    "doorboard-config",
    "doorboard-birdnet",
    "doorboard-satellites",
    "doorboard-aircraft",
    "doorboard-printer",
    "doorboard-food-recommendation",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wallboard_worker"]
