[project]
name = "doorboard-wallboard-worker"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "doorboard-contracts",
    "doorboard-config",
    "doorboard-birdnet",
    "doorboard-satellites",
    "doorboard-aircraft",
    "doorboard-printer",
    "doorboard-food-recommendation",
    "click>=8.1",
    "httpx",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[project.scripts]
wallboard-worker = "wallboard_worker.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wallboard_worker"]
