[project]
name = "doorboard-food-recommendation"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "httpx",
    "beautifulsoup4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/food_recommendation"]
