[project]
name = "doorboard-printer"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "doorboard-contracts",
    "doorboard-config",
    "httpx",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/printer"]
